--- a/style.css
+++ b/style.css
@@ -1,126 +1,155 @@
 
-*{
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
+* {
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
 
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.poppins-extrabold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 800;
-  font-style: normal;
-}
-
-.poppins-black {
-  font-family: "Poppins", sans-serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.poppins-thin-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
-  font-style: italic;
-}
-
-.poppins-extralight-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  font-style: italic;
-}
-
-.poppins-light-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.poppins-regular-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.poppins-medium-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.poppins-semibold-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: italic;
-}
-
-.poppins-bold-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.poppins-extrabold-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 800;
-  font-style: italic;
-}
-
-.poppins-black-italic {
-  font-family: "Poppins", sans-serif;
-  font-weight: 900;
-  font-style: italic;
-}
-
-
-body{
+body {
     background-color: black;
-    margin:auto;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
-nav{
-    display: block;
-    color:aqua;
+
+nav {
     text-align: center;
-    background-color:blue;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-radius: 50px;
+    background-color: blue;
+    padding: 15px;
+    border-radius: 0 0 20px 20px;
 }
-#plus{
-    font-size: xx-large;
+
+nav h1 {
+    margin: 0;
+    font-weight: 700;
+    color: aqua;
+}
+
+#plus {
+    font-size: 2rem;
     border-radius: 50%;
     background-color: blue;
     color: grey;
     position: fixed;
-    bottom:20px;
-    right:20px;
-
-    transition: 2s;
-    cursor:pointer;
-
+    bottom: 20px;
+    right: 20px;
+    transition: 0.3s;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: none;
 }
-#plus:hover{
-    color: black
 
+#plus:hover {
+    color: black;
+    background-color: aqua;
 }
-.popup{
-    background-color: rgb(0, 26, 255);
-    color:black;
-    height: fit-content;
-    width: fit-content;
-    border-radius:10px;
-    position:fixed ;
-    right:50%;
-    left:20%;
+
+.popup {
+    display: none;
+    background-color: white;
+    color: black;
+    border-radius: 15px;
+    padding: 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.popup input,
+.popup select,
+.popup textarea {
+    width: 100%;
+    margin: 8px 0;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    background-color: rgb(0, 255, 85);
+    color: black;
+    font-size: 1rem;
+}
+
+.popup button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background: blue;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.popup button:hover {
+    background: darkblue;
+}
+
+/* Task List */
+.task-list {
+    margin: 20px;
+    padding: 10px;
+}
+
+.task {
+    background: #1a1a1a;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.task h3 {
+    margin: 0;
+    font-weight: 600;
+}
+
+.task small {
+    color: gray;
+}
+
+.priority {
+    padding: 3px 8px;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    margin-left: 10px;
+}
+
+.urgent {
+    background: red;
+    color: white;
+}
+
+.important {
+    background: orange;
+    color: black;
+}
+
+.not-important {
+    background: gray;
+    color: white;
+}
+
+.useless {
+    background: black;
+    color: white;
+    border: 1px solid white;
+}
+
+.delete-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 3px 8px;
+    font-size: 0.8rem;
+}
+
+.delete-btn:hover {
+    background: darkred;
 }
