--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-* {
+*{
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
@@ -45,7 +45,7 @@ nav h1 {
 
 .popup {
     display: none;
-    background-color: white;
+    background-color: rgb(6, 134, 255);
     color: black;
     border-radius: 15px;
     padding: 20px;
@@ -86,7 +86,6 @@ nav h1 {
     background: darkblue;
 }
 
-/* Task List */
 .task-list {
     margin: 20px;
     padding: 10px;
@@ -104,7 +103,7 @@ nav h1 {
     margin: 0;
     font-weight: 600;
 }
-
+ 
 .task small {
     color: gray;
 }
